--- a/themes/base_files/less/tiki-bootstrap_overrides.less
+++ b/themes/base_files/less/tiki-bootstrap_overrides.less
@@ -43,6 +43,14 @@ body.tiki.navbar-padding {
 	overflow: visible;
 }
 
+.panel-nocolor,
+.panel-nocolor > .panel-heading,
+.panel-nocolor > .panel-body,
+.panel-nocolor > .panel-footer {
+	border: none;
+	background: transparent;
+}
+
 .tiki.dropdown-menu {
 	padding: 0
 }
